# Budgetter-server

./: README.md  manage.py  pyproject.toml  requirements.txt
budgetter/: settings.py  urls.py  wsgi.py
budgetter-server/budgetter/: settings.py
budgetter-server/dashboard/: admin.py  urls.py
budgetter_server/: main.py
budgetter_server/api/v1/: api.py
budgetter_server/api/v1/endpoints/: accounts.py  import_ofx.py  transactions.py
budgetter_server/budgetter/: asgi.py  consumers.py  settings.py  urls.py
budgetter_server/core/: config.py
budgetter_server/dashboard/: admin.py  apps.py  consumers.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
budgetter_server/dashboard/fixtures/: fr_banks.json
budgetter_server/dashboard/migrations/: 0011_auto_20231107_2225.py  1000_auto_20231107_2225.py
budgetter_server/db/: session.py
budgetter_server/models/: __init__.py  sql_models.py
budgetter_server/resources/banks/: fr_banks.json
budgetter_server/schemas/: account.py  transaction.py
budgetter_server/utils/: ai_categorizer.py  categorizer.py  category_predictor.py  ofx_handler.py  ofxtools.py
dashboard/: models.py  serializers.py  views.py
tests/: conftest.py
tests/api/v1/: test_accounts.py  test_import.py  test_transactions.py
tests/fixtures/: sample.ofx
