[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetter_server"
version = "2025.1.0"
authors = [{ name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" }]
description = "Finance manager desktop application"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["finance", "budget", "management"]
license = { text = "GPL-3.0" }
classifiers = []
dependencies = [
  "Django>=5.2.8",
  "djangorestframework>=3.16.1",
  "django-filter>=25.2",
  "django-extensions",
  "drf_yasg>=1.21.11",
  "psycopg[binary]>=3.2.13",
  "pytz>=2025.2",
  "ofxtools>=0.9.5",
  "transformers>=4.30.0",
  "torch>=2.0.0",
]

[project.urls]
repository = "https://github.com/opierre/Budgetter-server"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.mypy_cache
    | \.venv
    | build
    | dist
  )/
  ^resources/
  ^skeletons/
)
'''
