[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetter_server"
version = "2025.1.0"
authors = [{ name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" }]
description = "Finance manager server"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["finance", "budget", "management"]
license = { text = "GPL-3.0" }
classifiers = []
dependencies = [
  "psycopg[binary]>=3.2.13",
  "ofxtools>=0.9.5",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "sqlmodel>=0.0.14",
  "pydantic-settings>=2.0.0",
]

[project.urls]
repository = "https://github.com/opierre/Budgetter-server"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.mypy_cache
    | \.venv
    | build
    | dist
  )/
  ^resources/
  ^skeletons/
)
'''
