[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetter_server"
version = "2025.1.0"
authors = [{ name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" }]
description = "Finance manager server"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["finance", "budget", "management"]
license = "GPL-3.0-only"
classifiers = []
dependencies = [
  "psycopg[binary]>=3.2.13",
  "ofxtools>=0.9.5",
  "transformers>=4.30.0",
  "torch>=2.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "sqlmodel>=0.0.14",
  "pydantic-settings>=2.0.0",
  "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = ["pytest>=7.12.0", "httpx>=0.28.1", "pytest-cov>=7.0.0"]

[project.urls]
repository = "https://github.com/opierre/Budgetter-server"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.mypy_cache
    | \.venv
    | build
    | dist
  )/
  ^resources/
  ^skeletons/
)
'''

[tool.setuptools]
py-modules = []


[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=budgetter_server --cov-report=term-missing --cov-report html:cov_html"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = [".", "budgetter_server"]
